package switch2020.project.controllers;

public class Category {
    private int categoryId;
    private String name;
    private boolean isBuiltIn;
    private int parentNumber;
    private int childrenNumber;


    public Category() {
        this.isBuiltIn = false;
        this.parentNumber = 0;
    }

    private boolean is


}
